--- a/lib/config/localizations/app_en.arb
+++ b/lib/config/localizations/app_en.arb
@@ -1,4 +1,11 @@
 {
     "@@locale": "en",
+    "login": "Login",
+    "email": "Email",
+    "email_required":"Email is required",
+    "email_invalid":"Email is invalid",
+    "password": "Password",
+    "password_required": "Password is required",
+    "password_invalid":"Invalid password format",
     "collaborators": "Collaborators"
 }
